# TSL_VS

./: README.md
TSL/: TSL.sln  TSL.vcxproj  TSL.vcxproj.filters  test1.avi  test4.avi
TSL_CC/: TSL_CC.sln  TSL_CC.vcxproj  camera_usage.cpp  main.cpp  test2.avi  test3.avi
TSL_CMAKE/: CMakeLists.txt
TSL_CMAKE/src/: camera_usage.hpp  image_processing.cpp  image_processing.hpp  main.cpp
